8185348: Major performance regression in GetMethodDeclaringClass and other JVMTI Method functions

Reviewed-by: phh